--- a/style.css
+++ b/style.css
@@ -476,14 +476,14 @@ body {
     align-content: center;
 }
 
-.Gallery {
+.gallery {
   display: grid;
-  gap: 5px;
-  padding: 0; 
-  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+  gap: 25px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  padding: 10px;
 }
 
-.Gallery img {
+.gallery img {
   width: 100%;
   aspect-ratio: 1 / 1;
   object-fit: cover;
@@ -491,6 +491,6 @@ body {
   transition: 0.3s ease;
 }
 
-.Gallery img:hover {
-  transform: scale(1.25);
+.gallery img:hover {
+  transform: scale(1.1);
 }
